--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ray Gesualdo <ray@promio.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "autoprefixer": "^6.3.6",
+    "browser-sync": "^2.12.12",
+    "cssnano": "^3.7.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-cdnify": "^1.0.6",
+    "gulp-concat": "^2.6.0",
+    "gulp-copy": "0.0.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-replace-task": "^0.11.0",
+    "gulp-s3-upload": "^1.6.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3"
+  }
 }
