--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   "author": "Ray Gesualdo <ray@promio.com>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
     "browser-sync": "^2.12.12",
-    "cssnano": "^3.7.0",
     "del": "^2.2.0",
+    "dotenv": "^2.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cdnify": "^1.0.6",
+    "gulp-clean-css": "^2.0.10",
     "gulp-concat": "^2.6.0",
     "gulp-copy": "0.0.2",
+    "gulp-imagemin": "^3.0.1",
     "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace-task": "^0.11.0",
     "gulp-s3-upload": "^1.6.0",
     "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3"
   }
 }
