--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "dotenv": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-cdnify": "^1.0.6",
+    "gulp-cdnify": "git://github.com/raygesualdo/gulp-cdnify.git#issue-12",
     "gulp-clean-css": "^2.0.10",
     "gulp-concat": "^2.6.0",
-    "gulp-copy": "0.0.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -25,6 +24,7 @@
     "gulp-s3-upload": "^1.6.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "run-sequence": "^1.2.1"
   }
 }
