--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-zip": "^4.0.0",
     "run-sequence": "^1.2.1"
   }
 }
